experiments/kind/r10-independent-labels/fixtures/deprecated-api-ingress-v1beta1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: legacy-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: legacy.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: legacy-service
              servicePort: 80
